src/style.scss
@import url('https://fonts.googleapis.com/css2?family=Actor&display=swap');

@mixin flex-row-center {
     display: flex;
     justify-content: center;
     align-items: center;
}

@mixin flex-row-between {
     display: flex;
     justify-content: space-between;
     align-items: center;
}

@mixin flex-col {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
}

@mixin flex-col-gap {
     display: flex;
     flex-direction: column;
     gap: 30px;
}

// variables used
$dark: #23272F;
$light: #FFFFFF;
$box-clr: #323B4E;
$ph-sa: #747272;
$search-icon-bg: #F2F2F2;
$link: #539BF5;

* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Actor';
}

a {
     color: $light;
     font-size: 16px;
     text-decoration: none;
}

.link-disable {
     pointer-events: none;
}

.app {
     background-color: $dark;
     padding: 20px 0;
     margin: auto;
     min-height: 100vh;
     transition: 200ms;
}

// header component

.header {
     @include flex-row-between;
     width: 500px;
     margin: auto;
     color: $light;
     position: relative;

     .github-icon-container {
          height: 40px;
          width: 40px;
          background-color: $light;
          border-radius: 8px;
          @include flex-row-center;

          .fa-github {
               color: $dark;
               font-size: 30px;
          }
     }

     .input-container {
          margin: 0 15px;
          height: 40px;
          width: 400px;
          display: flex;
          border-radius: 8px;
          overflow: hidden;
          position: absolute;
          left: 50%;
          transform: translate(-50%);

          input {
               width: 85%;
               height: 100%;
               border: 0;
               outline: 0;
               padding: 18px;
               font-size: 14px;
               letter-spacing: .6px;
               font-weight: bold;

               &::placeholder {
                    color: $ph-sa;
               }
          }

          .glass-container {
               width: 15%;
               height: 100%;
               background-color: $search-icon-bg;
               cursor: pointer;
               outline: 0;
               border: 0;
               @include flex-row-center;

               .fa-magnifying-glass {
                    font-size: 20px;
                    color: $ph-sa;
                    transition: 100ms;
               }

               &:active .fa-magnifying-glass {
                    font-size: 18px;
               }
          }

     }

     .fa-sun,
     .fa-moon {
          font-size: 18px;
          cursor: pointer;
          transition: 200ms;

          &:active,
          :active {
               font-size: 16px;
          }
     }
}

.message {
     width: 350px;
     color: $light;
     margin: auto;
     margin-top: 30px;

     p {
          font-size: 18px;
     }

     .error-img {
          width: 100%;
          text-align: center;
          transition: 300ms;

          img {
               margin-top: 30px;
               height: 180px;
               width: 180px;
          }
     }

     hr {
          margin-top: 15px;
     }
}

// search-result component

.search-result {
     @include flex-col-gap;
     margin: auto;
     width: 500px;
     color: $light;
     margin-top: 30px;

     .profile-container {
          .img-container {
               margin: auto;
               box-sizing: content-box;
               border: 2px solid $light;
               border-radius: 50%;
               height: 122px;
               width: 122px;
               padding: 2px;

               .img {
                    height: 122px;
                    width: 122px;
                    border-radius: 50%;
               }
          }
     }

     .numbered-data {
          margin-top: -10px;
          width: 100%;
          height: 100px;
          background-color: $box-clr;
          border-radius: 16px;
          @include flex-row-center;
          justify-content: space-around;
          box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
          user-select: none;

          .nd {
               @include flex-col;

               span {
                    font-size: 34px;
                    margin-bottom: 6px;
               }

               p {
                    font-size: 14px;
               }
          }
     }

     .for-padding {
          padding: 0 18px;
          @include flex-col-gap;

          .basic-info {
               h2 {
                    font-size: 22px;
               }

               .link-jd {
                    @include flex-row-between;

                    a {
                         color: $link;
                    }
               }
          }

          // .bio{
          // }

          .additional-info {

               .hr-top {
                    margin-bottom: 15px;
               }

               .hr-bottom {
                    margin-top: 5px;
               }

               .ai-ul {
                    @include flex-row-between;

                    li {
                         list-style: none;
                         margin-bottom: 12px;

                         i {
                              margin-right: 10px;
                         }
                    }
               }
          }
     }
}

@media all and (max-width: 550px) {
     .header {
          width: 430px;
     }

     .input-container {
          width: 350px !important;
     }

     .message {
          width: 300px;
     }

     .search-result {
          width: 430px;
     }
}

// change theme
.app-light {
     background-color: $light;

     .header {
          .github-icon-container {
               background-color: $dark;

               .fa-github {
                    color: $light;
               }
          }

          .input-container {
               border: 1px solid $dark;
          }

          .fa-moon {
               color: $dark;
          }
     }

     .message {
          color: $dark;
     }

     .search-result {
          .profile-container {
               .img-container {
                    border: 2px solid $dark;
               }
          }

          .for-padding {
               color: $dark;
          }
     }
}

